Tugas3/case5/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/chat-network: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - args:
            - sh
            - -c
            - npm install && npm start
          image: node:14
          name: frontend
          ports:
            - containerPort: 8081
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: frontend-claim0
          workingDir: /app
      restartPolicy: Always
      volumes:
        - name: frontend-claim0
          persistentVolumeClaim:
            claimName: frontend-claim0
status: {}
