Tugas3/case5/mongo-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-auth
  name: mongo-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-auth
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/chat-network: "true"
        io.kompose.service: mongo-auth
    spec:
      containers:
        - image: mongo
          name: mongo-auth
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data-auth
      restartPolicy: Always
      volumes:
        - name: mongo-data-auth
          persistentVolumeClaim:
            claimName: mongo-data-auth
status: {}
