Tugas3/case5/chat-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: chat-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/chat-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/chat-network: "true"
